// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`testing ToDoListItem rendering renders as expected 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ToDoListItem
    contentText=""
    onComplete={[Function]}
    onEditDone={[Function]}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": <View
        style={
          Array [
            Object {
              "backgroundColor": "rgba(230, 230, 230, 1)",
              "flex": 1,
              "height": 250,
              "justifyContent": "space-around",
              "width": "100%",
            },
            Object {
              "backgroundColor": "#353627",
            },
          ]
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "height": 150,
              "justifyContent": "center",
              "width": "100%",
            }
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "rgba(255, 255, 255, 1)",
                "fontSize": 24,
                "fontWeight": "500",
              }
            }
          >
            
          </Text>
        </View>
        <View
          style={
            Object {
              "flexDirection": "row",
              "justifyContent": "space-around",
            }
          }
        >
          <Icon
            allowFontScaling={false}
            color="rgba(255, 255, 255, 1)"
            name="edit"
            onPress={[Function]}
            size={32}
          />
          <TouchableOpacity
            activeOpacity={0.2}
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "borderColor": "rgba(255, 255, 255, 1)",
                  "borderRadius": 5,
                  "borderWidth": 2,
                  "justifyContent": "center",
                  "paddingHorizontal": 10,
                  "paddingVertical": 10,
                }
              }
            >
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Object {
                    "color": "rgba(255, 255, 255, 1)",
                    "fontSize": 18,
                    "fontWeight": "500",
                  }
                }
              >
                Attach media
              </Text>
            </View>
          </TouchableOpacity>
          <Icon
            allowFontScaling={false}
            color="rgba(255, 255, 255, 1)"
            name="check"
            onPress={[Function]}
            size={32}
          />
        </View>
      </View>,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <View
            style={
              Object {
                "alignItems": "center",
                "height": 150,
                "justifyContent": "center",
                "width": "100%",
              }
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Object {
                  "color": "rgba(255, 255, 255, 1)",
                  "fontSize": 24,
                  "fontWeight": "500",
                }
              }
            >
              
            </Text>
          </View>,
          <View
            style={
              Object {
                "flexDirection": "row",
                "justifyContent": "space-around",
              }
            }
          >
            <Icon
              allowFontScaling={false}
              color="rgba(255, 255, 255, 1)"
              name="edit"
              onPress={[Function]}
              size={32}
            />
            <TouchableOpacity
              activeOpacity={0.2}
            >
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "borderColor": "rgba(255, 255, 255, 1)",
                    "borderRadius": 5,
                    "borderWidth": 2,
                    "justifyContent": "center",
                    "paddingHorizontal": 10,
                    "paddingVertical": 10,
                  }
                }
              >
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  style={
                    Object {
                      "color": "rgba(255, 255, 255, 1)",
                      "fontSize": 18,
                      "fontWeight": "500",
                    }
                  }
                >
                  Attach media
                </Text>
              </View>
            </TouchableOpacity>
            <Icon
              allowFontScaling={false}
              color="rgba(255, 255, 255, 1)"
              name="check"
              onPress={[Function]}
              size={32}
            />
          </View>,
        ],
        "style": Array [
          Object {
            "backgroundColor": "rgba(230, 230, 230, 1)",
            "flex": 1,
            "height": 250,
            "justifyContent": "space-around",
            "width": "100%",
          },
          Object {
            "backgroundColor": "#353627",
          },
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Object {
                  "color": "rgba(255, 255, 255, 1)",
                  "fontSize": 24,
                  "fontWeight": "500",
                }
              }
            >
              
            </Text>,
            "style": Object {
              "alignItems": "center",
              "height": 150,
              "justifyContent": "center",
              "width": "100%",
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "accessible": true,
              "allowFontScaling": true,
              "children": "",
              "ellipsizeMode": "tail",
              "style": Object {
                "color": "rgba(255, 255, 255, 1)",
                "fontSize": 24,
                "fontWeight": "500",
              },
            },
            "ref": null,
            "rendered": "",
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <Icon
                allowFontScaling={false}
                color="rgba(255, 255, 255, 1)"
                name="edit"
                onPress={[Function]}
                size={32}
              />,
              <TouchableOpacity
                activeOpacity={0.2}
              >
                <View
                  style={
                    Object {
                      "alignItems": "center",
                      "borderColor": "rgba(255, 255, 255, 1)",
                      "borderRadius": 5,
                      "borderWidth": 2,
                      "justifyContent": "center",
                      "paddingHorizontal": 10,
                      "paddingVertical": 10,
                    }
                  }
                >
                  <Text
                    accessible={true}
                    allowFontScaling={true}
                    ellipsizeMode="tail"
                    style={
                      Object {
                        "color": "rgba(255, 255, 255, 1)",
                        "fontSize": 18,
                        "fontWeight": "500",
                      }
                    }
                  >
                    Attach media
                  </Text>
                </View>
              </TouchableOpacity>,
              <Icon
                allowFontScaling={false}
                color="rgba(255, 255, 255, 1)"
                name="check"
                onPress={[Function]}
                size={32}
              />,
            ],
            "style": Object {
              "flexDirection": "row",
              "justifyContent": "space-around",
            },
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "allowFontScaling": false,
                "color": "rgba(255, 255, 255, 1)",
                "name": "edit",
                "onPress": [Function],
                "size": 32,
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "activeOpacity": 0.2,
                "children": <View
                  style={
                    Object {
                      "alignItems": "center",
                      "borderColor": "rgba(255, 255, 255, 1)",
                      "borderRadius": 5,
                      "borderWidth": 2,
                      "justifyContent": "center",
                      "paddingHorizontal": 10,
                      "paddingVertical": 10,
                    }
                  }
                >
                  <Text
                    accessible={true}
                    allowFontScaling={true}
                    ellipsizeMode="tail"
                    style={
                      Object {
                        "color": "rgba(255, 255, 255, 1)",
                        "fontSize": 18,
                        "fontWeight": "500",
                      }
                    }
                  >
                    Attach media
                  </Text>
                </View>,
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": <Text
                    accessible={true}
                    allowFontScaling={true}
                    ellipsizeMode="tail"
                    style={
                      Object {
                        "color": "rgba(255, 255, 255, 1)",
                        "fontSize": 18,
                        "fontWeight": "500",
                      }
                    }
                  >
                    Attach media
                  </Text>,
                  "style": Object {
                    "alignItems": "center",
                    "borderColor": "rgba(255, 255, 255, 1)",
                    "borderRadius": 5,
                    "borderWidth": 2,
                    "justifyContent": "center",
                    "paddingHorizontal": 10,
                    "paddingVertical": 10,
                  },
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "accessible": true,
                    "allowFontScaling": true,
                    "children": "Attach media",
                    "ellipsizeMode": "tail",
                    "style": Object {
                      "color": "rgba(255, 255, 255, 1)",
                      "fontSize": 18,
                      "fontWeight": "500",
                    },
                  },
                  "ref": null,
                  "rendered": "Attach media",
                  "type": [Function],
                },
                "type": [Function],
              },
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "allowFontScaling": false,
                "color": "rgba(255, 255, 255, 1)",
                "name": "check",
                "onPress": [Function],
                "size": 32,
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
          ],
          "type": [Function],
        },
      ],
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <View
          style={
            Array [
              Object {
                "backgroundColor": "rgba(230, 230, 230, 1)",
                "flex": 1,
                "height": 250,
                "justifyContent": "space-around",
                "width": "100%",
              },
              Object {
                "backgroundColor": "#353627",
              },
            ]
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "height": 150,
                "justifyContent": "center",
                "width": "100%",
              }
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Object {
                  "color": "rgba(255, 255, 255, 1)",
                  "fontSize": 24,
                  "fontWeight": "500",
                }
              }
            >
              
            </Text>
          </View>
          <View
            style={
              Object {
                "flexDirection": "row",
                "justifyContent": "space-around",
              }
            }
          >
            <Icon
              allowFontScaling={false}
              color="rgba(255, 255, 255, 1)"
              name="edit"
              onPress={[Function]}
              size={32}
            />
            <TouchableOpacity
              activeOpacity={0.2}
            >
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "borderColor": "rgba(255, 255, 255, 1)",
                    "borderRadius": 5,
                    "borderWidth": 2,
                    "justifyContent": "center",
                    "paddingHorizontal": 10,
                    "paddingVertical": 10,
                  }
                }
              >
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  style={
                    Object {
                      "color": "rgba(255, 255, 255, 1)",
                      "fontSize": 18,
                      "fontWeight": "500",
                    }
                  }
                >
                  Attach media
                </Text>
              </View>
            </TouchableOpacity>
            <Icon
              allowFontScaling={false}
              color="rgba(255, 255, 255, 1)"
              name="check"
              onPress={[Function]}
              size={32}
            />
          </View>
        </View>,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <View
              style={
                Object {
                  "alignItems": "center",
                  "height": 150,
                  "justifyContent": "center",
                  "width": "100%",
                }
              }
            >
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Object {
                    "color": "rgba(255, 255, 255, 1)",
                    "fontSize": 24,
                    "fontWeight": "500",
                  }
                }
              >
                
              </Text>
            </View>,
            <View
              style={
                Object {
                  "flexDirection": "row",
                  "justifyContent": "space-around",
                }
              }
            >
              <Icon
                allowFontScaling={false}
                color="rgba(255, 255, 255, 1)"
                name="edit"
                onPress={[Function]}
                size={32}
              />
              <TouchableOpacity
                activeOpacity={0.2}
              >
                <View
                  style={
                    Object {
                      "alignItems": "center",
                      "borderColor": "rgba(255, 255, 255, 1)",
                      "borderRadius": 5,
                      "borderWidth": 2,
                      "justifyContent": "center",
                      "paddingHorizontal": 10,
                      "paddingVertical": 10,
                    }
                  }
                >
                  <Text
                    accessible={true}
                    allowFontScaling={true}
                    ellipsizeMode="tail"
                    style={
                      Object {
                        "color": "rgba(255, 255, 255, 1)",
                        "fontSize": 18,
                        "fontWeight": "500",
                      }
                    }
                  >
                    Attach media
                  </Text>
                </View>
              </TouchableOpacity>
              <Icon
                allowFontScaling={false}
                color="rgba(255, 255, 255, 1)"
                name="check"
                onPress={[Function]}
                size={32}
              />
            </View>,
          ],
          "style": Array [
            Object {
              "backgroundColor": "rgba(230, 230, 230, 1)",
              "flex": 1,
              "height": 250,
              "justifyContent": "space-around",
              "width": "100%",
            },
            Object {
              "backgroundColor": "#353627",
            },
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Object {
                    "color": "rgba(255, 255, 255, 1)",
                    "fontSize": 24,
                    "fontWeight": "500",
                  }
                }
              >
                
              </Text>,
              "style": Object {
                "alignItems": "center",
                "height": 150,
                "justifyContent": "center",
                "width": "100%",
              },
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "accessible": true,
                "allowFontScaling": true,
                "children": "",
                "ellipsizeMode": "tail",
                "style": Object {
                  "color": "rgba(255, 255, 255, 1)",
                  "fontSize": 24,
                  "fontWeight": "500",
                },
              },
              "ref": null,
              "rendered": "",
              "type": [Function],
            },
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": Array [
                <Icon
                  allowFontScaling={false}
                  color="rgba(255, 255, 255, 1)"
                  name="edit"
                  onPress={[Function]}
                  size={32}
                />,
                <TouchableOpacity
                  activeOpacity={0.2}
                >
                  <View
                    style={
                      Object {
                        "alignItems": "center",
                        "borderColor": "rgba(255, 255, 255, 1)",
                        "borderRadius": 5,
                        "borderWidth": 2,
                        "justifyContent": "center",
                        "paddingHorizontal": 10,
                        "paddingVertical": 10,
                      }
                    }
                  >
                    <Text
                      accessible={true}
                      allowFontScaling={true}
                      ellipsizeMode="tail"
                      style={
                        Object {
                          "color": "rgba(255, 255, 255, 1)",
                          "fontSize": 18,
                          "fontWeight": "500",
                        }
                      }
                    >
                      Attach media
                    </Text>
                  </View>
                </TouchableOpacity>,
                <Icon
                  allowFontScaling={false}
                  color="rgba(255, 255, 255, 1)"
                  name="check"
                  onPress={[Function]}
                  size={32}
                />,
              ],
              "style": Object {
                "flexDirection": "row",
                "justifyContent": "space-around",
              },
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "allowFontScaling": false,
                  "color": "rgba(255, 255, 255, 1)",
                  "name": "edit",
                  "onPress": [Function],
                  "size": 32,
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "activeOpacity": 0.2,
                  "children": <View
                    style={
                      Object {
                        "alignItems": "center",
                        "borderColor": "rgba(255, 255, 255, 1)",
                        "borderRadius": 5,
                        "borderWidth": 2,
                        "justifyContent": "center",
                        "paddingHorizontal": 10,
                        "paddingVertical": 10,
                      }
                    }
                  >
                    <Text
                      accessible={true}
                      allowFontScaling={true}
                      ellipsizeMode="tail"
                      style={
                        Object {
                          "color": "rgba(255, 255, 255, 1)",
                          "fontSize": 18,
                          "fontWeight": "500",
                        }
                      }
                    >
                      Attach media
                    </Text>
                  </View>,
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "children": <Text
                      accessible={true}
                      allowFontScaling={true}
                      ellipsizeMode="tail"
                      style={
                        Object {
                          "color": "rgba(255, 255, 255, 1)",
                          "fontSize": 18,
                          "fontWeight": "500",
                        }
                      }
                    >
                      Attach media
                    </Text>,
                    "style": Object {
                      "alignItems": "center",
                      "borderColor": "rgba(255, 255, 255, 1)",
                      "borderRadius": 5,
                      "borderWidth": 2,
                      "justifyContent": "center",
                      "paddingHorizontal": 10,
                      "paddingVertical": 10,
                    },
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "class",
                    "props": Object {
                      "accessible": true,
                      "allowFontScaling": true,
                      "children": "Attach media",
                      "ellipsizeMode": "tail",
                      "style": Object {
                        "color": "rgba(255, 255, 255, 1)",
                        "fontSize": 18,
                        "fontWeight": "500",
                      },
                    },
                    "ref": null,
                    "rendered": "Attach media",
                    "type": [Function],
                  },
                  "type": [Function],
                },
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "allowFontScaling": false,
                  "color": "rgba(255, 255, 255, 1)",
                  "name": "check",
                  "onPress": [Function],
                  "size": 32,
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
            ],
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`testing ToDoListItem rendering renders as expected 2`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ToDoListItem
    contentText="Need to buy biscuits"
    onComplete={[Function]}
    onEditDone={[Function]}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": <View
        style={
          Array [
            Object {
              "backgroundColor": "rgba(230, 230, 230, 1)",
              "flex": 1,
              "height": 250,
              "justifyContent": "space-around",
              "width": "100%",
            },
            Object {
              "backgroundColor": "#844509",
            },
          ]
        }
      >
        <View
          style={
            Object {
              "alignItems": "center",
              "height": 150,
              "justifyContent": "center",
              "width": "100%",
            }
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Object {
                "color": "rgba(255, 255, 255, 1)",
                "fontSize": 24,
                "fontWeight": "500",
              }
            }
          >
            
          </Text>
        </View>
        <View
          style={
            Object {
              "flexDirection": "row",
              "justifyContent": "space-around",
            }
          }
        >
          <Icon
            allowFontScaling={false}
            color="rgba(255, 255, 255, 1)"
            name="edit"
            onPress={[Function]}
            size={32}
          />
          <TouchableOpacity
            activeOpacity={0.2}
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "borderColor": "rgba(255, 255, 255, 1)",
                  "borderRadius": 5,
                  "borderWidth": 2,
                  "justifyContent": "center",
                  "paddingHorizontal": 10,
                  "paddingVertical": 10,
                }
              }
            >
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Object {
                    "color": "rgba(255, 255, 255, 1)",
                    "fontSize": 18,
                    "fontWeight": "500",
                  }
                }
              >
                Attach media
              </Text>
            </View>
          </TouchableOpacity>
          <Icon
            allowFontScaling={false}
            color="rgba(255, 255, 255, 1)"
            name="check"
            onPress={[Function]}
            size={32}
          />
        </View>
      </View>,
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <View
            style={
              Object {
                "alignItems": "center",
                "height": 150,
                "justifyContent": "center",
                "width": "100%",
              }
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Object {
                  "color": "rgba(255, 255, 255, 1)",
                  "fontSize": 24,
                  "fontWeight": "500",
                }
              }
            >
              
            </Text>
          </View>,
          <View
            style={
              Object {
                "flexDirection": "row",
                "justifyContent": "space-around",
              }
            }
          >
            <Icon
              allowFontScaling={false}
              color="rgba(255, 255, 255, 1)"
              name="edit"
              onPress={[Function]}
              size={32}
            />
            <TouchableOpacity
              activeOpacity={0.2}
            >
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "borderColor": "rgba(255, 255, 255, 1)",
                    "borderRadius": 5,
                    "borderWidth": 2,
                    "justifyContent": "center",
                    "paddingHorizontal": 10,
                    "paddingVertical": 10,
                  }
                }
              >
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  style={
                    Object {
                      "color": "rgba(255, 255, 255, 1)",
                      "fontSize": 18,
                      "fontWeight": "500",
                    }
                  }
                >
                  Attach media
                </Text>
              </View>
            </TouchableOpacity>
            <Icon
              allowFontScaling={false}
              color="rgba(255, 255, 255, 1)"
              name="check"
              onPress={[Function]}
              size={32}
            />
          </View>,
        ],
        "style": Array [
          Object {
            "backgroundColor": "rgba(230, 230, 230, 1)",
            "flex": 1,
            "height": 250,
            "justifyContent": "space-around",
            "width": "100%",
          },
          Object {
            "backgroundColor": "#844509",
          },
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Object {
                  "color": "rgba(255, 255, 255, 1)",
                  "fontSize": 24,
                  "fontWeight": "500",
                }
              }
            >
              
            </Text>,
            "style": Object {
              "alignItems": "center",
              "height": 150,
              "justifyContent": "center",
              "width": "100%",
            },
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "accessible": true,
              "allowFontScaling": true,
              "children": "",
              "ellipsizeMode": "tail",
              "style": Object {
                "color": "rgba(255, 255, 255, 1)",
                "fontSize": 24,
                "fontWeight": "500",
              },
            },
            "ref": null,
            "rendered": "",
            "type": [Function],
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <Icon
                allowFontScaling={false}
                color="rgba(255, 255, 255, 1)"
                name="edit"
                onPress={[Function]}
                size={32}
              />,
              <TouchableOpacity
                activeOpacity={0.2}
              >
                <View
                  style={
                    Object {
                      "alignItems": "center",
                      "borderColor": "rgba(255, 255, 255, 1)",
                      "borderRadius": 5,
                      "borderWidth": 2,
                      "justifyContent": "center",
                      "paddingHorizontal": 10,
                      "paddingVertical": 10,
                    }
                  }
                >
                  <Text
                    accessible={true}
                    allowFontScaling={true}
                    ellipsizeMode="tail"
                    style={
                      Object {
                        "color": "rgba(255, 255, 255, 1)",
                        "fontSize": 18,
                        "fontWeight": "500",
                      }
                    }
                  >
                    Attach media
                  </Text>
                </View>
              </TouchableOpacity>,
              <Icon
                allowFontScaling={false}
                color="rgba(255, 255, 255, 1)"
                name="check"
                onPress={[Function]}
                size={32}
              />,
            ],
            "style": Object {
              "flexDirection": "row",
              "justifyContent": "space-around",
            },
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "allowFontScaling": false,
                "color": "rgba(255, 255, 255, 1)",
                "name": "edit",
                "onPress": [Function],
                "size": 32,
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "activeOpacity": 0.2,
                "children": <View
                  style={
                    Object {
                      "alignItems": "center",
                      "borderColor": "rgba(255, 255, 255, 1)",
                      "borderRadius": 5,
                      "borderWidth": 2,
                      "justifyContent": "center",
                      "paddingHorizontal": 10,
                      "paddingVertical": 10,
                    }
                  }
                >
                  <Text
                    accessible={true}
                    allowFontScaling={true}
                    ellipsizeMode="tail"
                    style={
                      Object {
                        "color": "rgba(255, 255, 255, 1)",
                        "fontSize": 18,
                        "fontWeight": "500",
                      }
                    }
                  >
                    Attach media
                  </Text>
                </View>,
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": <Text
                    accessible={true}
                    allowFontScaling={true}
                    ellipsizeMode="tail"
                    style={
                      Object {
                        "color": "rgba(255, 255, 255, 1)",
                        "fontSize": 18,
                        "fontWeight": "500",
                      }
                    }
                  >
                    Attach media
                  </Text>,
                  "style": Object {
                    "alignItems": "center",
                    "borderColor": "rgba(255, 255, 255, 1)",
                    "borderRadius": 5,
                    "borderWidth": 2,
                    "justifyContent": "center",
                    "paddingHorizontal": 10,
                    "paddingVertical": 10,
                  },
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "accessible": true,
                    "allowFontScaling": true,
                    "children": "Attach media",
                    "ellipsizeMode": "tail",
                    "style": Object {
                      "color": "rgba(255, 255, 255, 1)",
                      "fontSize": 18,
                      "fontWeight": "500",
                    },
                  },
                  "ref": null,
                  "rendered": "Attach media",
                  "type": [Function],
                },
                "type": [Function],
              },
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "allowFontScaling": false,
                "color": "rgba(255, 255, 255, 1)",
                "name": "check",
                "onPress": [Function],
                "size": 32,
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
          ],
          "type": [Function],
        },
      ],
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": <View
          style={
            Array [
              Object {
                "backgroundColor": "rgba(230, 230, 230, 1)",
                "flex": 1,
                "height": 250,
                "justifyContent": "space-around",
                "width": "100%",
              },
              Object {
                "backgroundColor": "#844509",
              },
            ]
          }
        >
          <View
            style={
              Object {
                "alignItems": "center",
                "height": 150,
                "justifyContent": "center",
                "width": "100%",
              }
            }
          >
            <Text
              accessible={true}
              allowFontScaling={true}
              ellipsizeMode="tail"
              style={
                Object {
                  "color": "rgba(255, 255, 255, 1)",
                  "fontSize": 24,
                  "fontWeight": "500",
                }
              }
            >
              
            </Text>
          </View>
          <View
            style={
              Object {
                "flexDirection": "row",
                "justifyContent": "space-around",
              }
            }
          >
            <Icon
              allowFontScaling={false}
              color="rgba(255, 255, 255, 1)"
              name="edit"
              onPress={[Function]}
              size={32}
            />
            <TouchableOpacity
              activeOpacity={0.2}
            >
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "borderColor": "rgba(255, 255, 255, 1)",
                    "borderRadius": 5,
                    "borderWidth": 2,
                    "justifyContent": "center",
                    "paddingHorizontal": 10,
                    "paddingVertical": 10,
                  }
                }
              >
                <Text
                  accessible={true}
                  allowFontScaling={true}
                  ellipsizeMode="tail"
                  style={
                    Object {
                      "color": "rgba(255, 255, 255, 1)",
                      "fontSize": 18,
                      "fontWeight": "500",
                    }
                  }
                >
                  Attach media
                </Text>
              </View>
            </TouchableOpacity>
            <Icon
              allowFontScaling={false}
              color="rgba(255, 255, 255, 1)"
              name="check"
              onPress={[Function]}
              size={32}
            />
          </View>
        </View>,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <View
              style={
                Object {
                  "alignItems": "center",
                  "height": 150,
                  "justifyContent": "center",
                  "width": "100%",
                }
              }
            >
              <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Object {
                    "color": "rgba(255, 255, 255, 1)",
                    "fontSize": 24,
                    "fontWeight": "500",
                  }
                }
              >
                
              </Text>
            </View>,
            <View
              style={
                Object {
                  "flexDirection": "row",
                  "justifyContent": "space-around",
                }
              }
            >
              <Icon
                allowFontScaling={false}
                color="rgba(255, 255, 255, 1)"
                name="edit"
                onPress={[Function]}
                size={32}
              />
              <TouchableOpacity
                activeOpacity={0.2}
              >
                <View
                  style={
                    Object {
                      "alignItems": "center",
                      "borderColor": "rgba(255, 255, 255, 1)",
                      "borderRadius": 5,
                      "borderWidth": 2,
                      "justifyContent": "center",
                      "paddingHorizontal": 10,
                      "paddingVertical": 10,
                    }
                  }
                >
                  <Text
                    accessible={true}
                    allowFontScaling={true}
                    ellipsizeMode="tail"
                    style={
                      Object {
                        "color": "rgba(255, 255, 255, 1)",
                        "fontSize": 18,
                        "fontWeight": "500",
                      }
                    }
                  >
                    Attach media
                  </Text>
                </View>
              </TouchableOpacity>
              <Icon
                allowFontScaling={false}
                color="rgba(255, 255, 255, 1)"
                name="check"
                onPress={[Function]}
                size={32}
              />
            </View>,
          ],
          "style": Array [
            Object {
              "backgroundColor": "rgba(230, 230, 230, 1)",
              "flex": 1,
              "height": 250,
              "justifyContent": "space-around",
              "width": "100%",
            },
            Object {
              "backgroundColor": "#844509",
            },
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": <Text
                accessible={true}
                allowFontScaling={true}
                ellipsizeMode="tail"
                style={
                  Object {
                    "color": "rgba(255, 255, 255, 1)",
                    "fontSize": 24,
                    "fontWeight": "500",
                  }
                }
              >
                
              </Text>,
              "style": Object {
                "alignItems": "center",
                "height": 150,
                "justifyContent": "center",
                "width": "100%",
              },
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "accessible": true,
                "allowFontScaling": true,
                "children": "",
                "ellipsizeMode": "tail",
                "style": Object {
                  "color": "rgba(255, 255, 255, 1)",
                  "fontSize": 24,
                  "fontWeight": "500",
                },
              },
              "ref": null,
              "rendered": "",
              "type": [Function],
            },
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": Array [
                <Icon
                  allowFontScaling={false}
                  color="rgba(255, 255, 255, 1)"
                  name="edit"
                  onPress={[Function]}
                  size={32}
                />,
                <TouchableOpacity
                  activeOpacity={0.2}
                >
                  <View
                    style={
                      Object {
                        "alignItems": "center",
                        "borderColor": "rgba(255, 255, 255, 1)",
                        "borderRadius": 5,
                        "borderWidth": 2,
                        "justifyContent": "center",
                        "paddingHorizontal": 10,
                        "paddingVertical": 10,
                      }
                    }
                  >
                    <Text
                      accessible={true}
                      allowFontScaling={true}
                      ellipsizeMode="tail"
                      style={
                        Object {
                          "color": "rgba(255, 255, 255, 1)",
                          "fontSize": 18,
                          "fontWeight": "500",
                        }
                      }
                    >
                      Attach media
                    </Text>
                  </View>
                </TouchableOpacity>,
                <Icon
                  allowFontScaling={false}
                  color="rgba(255, 255, 255, 1)"
                  name="check"
                  onPress={[Function]}
                  size={32}
                />,
              ],
              "style": Object {
                "flexDirection": "row",
                "justifyContent": "space-around",
              },
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "allowFontScaling": false,
                  "color": "rgba(255, 255, 255, 1)",
                  "name": "edit",
                  "onPress": [Function],
                  "size": 32,
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "activeOpacity": 0.2,
                  "children": <View
                    style={
                      Object {
                        "alignItems": "center",
                        "borderColor": "rgba(255, 255, 255, 1)",
                        "borderRadius": 5,
                        "borderWidth": 2,
                        "justifyContent": "center",
                        "paddingHorizontal": 10,
                        "paddingVertical": 10,
                      }
                    }
                  >
                    <Text
                      accessible={true}
                      allowFontScaling={true}
                      ellipsizeMode="tail"
                      style={
                        Object {
                          "color": "rgba(255, 255, 255, 1)",
                          "fontSize": 18,
                          "fontWeight": "500",
                        }
                      }
                    >
                      Attach media
                    </Text>
                  </View>,
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "children": <Text
                      accessible={true}
                      allowFontScaling={true}
                      ellipsizeMode="tail"
                      style={
                        Object {
                          "color": "rgba(255, 255, 255, 1)",
                          "fontSize": 18,
                          "fontWeight": "500",
                        }
                      }
                    >
                      Attach media
                    </Text>,
                    "style": Object {
                      "alignItems": "center",
                      "borderColor": "rgba(255, 255, 255, 1)",
                      "borderRadius": 5,
                      "borderWidth": 2,
                      "justifyContent": "center",
                      "paddingHorizontal": 10,
                      "paddingVertical": 10,
                    },
                  },
                  "ref": null,
                  "rendered": Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "class",
                    "props": Object {
                      "accessible": true,
                      "allowFontScaling": true,
                      "children": "Attach media",
                      "ellipsizeMode": "tail",
                      "style": Object {
                        "color": "rgba(255, 255, 255, 1)",
                        "fontSize": 18,
                        "fontWeight": "500",
                      },
                    },
                    "ref": null,
                    "rendered": "Attach media",
                    "type": [Function],
                  },
                  "type": [Function],
                },
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "allowFontScaling": false,
                  "color": "rgba(255, 255, 255, 1)",
                  "name": "check",
                  "onPress": [Function],
                  "size": 32,
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
            ],
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
